style: ensure consistent card positioning on mobile using flexbox

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,6 +65,13 @@ header p {
   text-align: center;
 }
 /******* CARDS REVIEWS *******/
+.cards_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 40px;
+}
 .cards {
   background-color: #502050;
   border-radius: 10px;
